Add new media files and update portfolio project details

--- a/index.html
+++ b/index.html
@@ -868,9 +868,9 @@
         
         <div class="portfolio-grid">
             <div class="portfolio-item">
-                <div class="before-after-slider" data-project="built-in-bookcase">
-                    <img src="projects/built-in-bookcase/before.jpg" alt="Before" class="before-image">
-                    <img src="projects/built-in-bookcase/after.jpg" alt="After" class="after-image">
+                <div class="before-after-slider" data-project="built-in-bench">
+                    <img src="projects/built-in-bench/before.jpg" alt="Before" class="before-image">
+                    <img src="projects/built-in-bench/after.jpg" alt="After" class="after-image">
                     <div class="slider-handle"></div>
                     <div class="before-after-labels">
                         <span class="before-label">BEFORE</span>
@@ -878,38 +878,8 @@
                     </div>
                 </div>
                 <div class="portfolio-content">
-                    <h3>Built-in Bookcase</h3>
-                    <p>Marblehead, MA</p>
-                </div>
-            </div>
-            <div class="portfolio-item">
-                <div class="before-after-slider" data-project="pantry-built-ins">
-                    <img src="projects/pantry-built-ins/before.jpg" alt="Before" class="before-image">
-                    <img src="projects/pantry-built-ins/after.jpg" alt="After" class="after-image">
-                    <div class="slider-handle"></div>
-                    <div class="before-after-labels">
-                        <span class="before-label">BEFORE</span>
-                        <span class="after-label">AFTER</span>
-                    </div>
-                </div>
-                <div class="portfolio-content">
-                    <h3>Pantry Built-ins</h3>
-                    <p>Peabody, MA</p>
-                </div>
-            </div>
-            <div class="portfolio-item">
-                <div class="before-after-slider" data-project="custom-closet-system">
-                    <img src="projects/custom-closet-system/before.jpg" alt="Before" class="before-image">
-                    <img src="projects/custom-closet-system/after.jpg" alt="After" class="after-image">
-                    <div class="slider-handle"></div>
-                    <div class="before-after-labels">
-                        <span class="before-label">BEFORE</span>
-                        <span class="after-label">AFTER</span>
-                    </div>
-                </div>
-                <div class="portfolio-content">
-                    <h3>Custom Closet System</h3>
-                    <p>Salem, MA</p>
+                    <h3>Built-in bench with drawers</h3>
+                    <p>Lynn, MA</p>
                 </div>
             </div>
             <div class="portfolio-item">
@@ -923,38 +893,68 @@
                     </div>
                 </div>
                 <div class="portfolio-content">
-                    <h3>Entertainment Center</h3>
+                    <h3>Built-in entertainment center</h3>
+                    <p>Newton, MA</p>
+                </div>
+            </div>
+            <div class="portfolio-item">
+                <div class="before-after-slider" data-project="laundry-unit">
+                    <img src="projects/laundry-unit/before.jpg" alt="Before" class="before-image">
+                    <img src="projects/laundry-unit/after.jpg" alt="After" class="after-image">
+                    <div class="slider-handle"></div>
+                    <div class="before-after-labels">
+                        <span class="before-label">BEFORE</span>
+                        <span class="after-label">AFTER</span>
+                    </div>
+                </div>
+                <div class="portfolio-content">
+                    <h3>Built-in laundry unit</h3>
+                    <p>Medford, MA</p>
+                </div>
+            </div>
+            <div class="portfolio-item">
+                <div class="before-after-slider" data-project="bookshelf">
+                    <img src="projects/bookshelf/before.jpg" alt="Before" class="before-image">
+                    <img src="projects/bookshelf/after.jpg" alt="After" class="after-image">
+                    <div class="slider-handle"></div>
+                    <div class="before-after-labels">
+                        <span class="before-label">BEFORE</span>
+                        <span class="after-label">AFTER</span>
+                    </div>
+                </div>
+                <div class="portfolio-content">
+                    <h3>Built-in bookshelf</h3>
+                    <p>Salem, MA</p>
+                </div>
+            </div>
+            <div class="portfolio-item">
+                <div class="before-after-slider" data-project="corner-cabinet">
+                    <img src="projects/corner-cabinet/before.jpg" alt="Before" class="before-image">
+                    <img src="projects/corner-cabinet/after.jpg" alt="After" class="after-image">
+                    <div class="slider-handle"></div>
+                    <div class="before-after-labels">
+                        <span class="before-label">BEFORE</span>
+                        <span class="after-label">AFTER</span>
+                    </div>
+                </div>
+                <div class="portfolio-content">
+                    <h3>Built-in corner cabinet</h3>
+                    <p>Harvard, MA</p>
+                </div>
+            </div>
+            <div class="portfolio-item">
+                <div class="before-after-slider" data-project="fireplace-shelving">
+                    <img src="projects/fireplace-shelving/before.jpg" alt="Before" class="before-image">
+                    <img src="projects/fireplace-shelving/after.jpg" alt="After" class="after-image">
+                    <div class="slider-handle"></div>
+                    <div class="before-after-labels">
+                        <span class="before-label">BEFORE</span>
+                        <span class="after-label">AFTER</span>
+                    </div>
+                </div>
+                <div class="portfolio-content">
+                    <h3>Built-in fireplace shelving</h3>
                     <p>Beverly, MA</p>
-                </div>
-            </div>
-            <div class="portfolio-item">
-                <div class="before-after-slider" data-project="kitchen-built-ins">
-                    <img src="projects/kitchen-built-ins/before.jpg" alt="Before" class="before-image">
-                    <img src="projects/kitchen-built-ins/after.jpg" alt="After" class="after-image">
-                    <div class="slider-handle"></div>
-                    <div class="before-after-labels">
-                        <span class="before-label">BEFORE</span>
-                        <span class="after-label">AFTER</span>
-                    </div>
-                </div>
-                <div class="portfolio-content">
-                    <h3>Kitchen Built-ins</h3>
-                    <p>Lynn, MA</p>
-                </div>
-            </div>
-            <div class="portfolio-item">
-                <div class="before-after-slider" data-project="home-office-storage">
-                    <img src="projects/home-office-storage/before.jpg" alt="Before" class="before-image">
-                    <img src="projects/home-office-storage/after.jpg" alt="After" class="after-image">
-                    <div class="slider-handle"></div>
-                    <div class="before-after-labels">
-                        <span class="before-label">BEFORE</span>
-                        <span class="after-label">AFTER</span>
-                    </div>
-                </div>
-                <div class="portfolio-content">
-                    <h3>Home Office Storage</h3>
-                    <p>Portsmouth, NH</p>
                 </div>
             </div>
         </div>
