Refactor code structure for improved readability and maintainability

--- a/meta/thank-you.html
+++ b/meta/thank-you.html
@@ -11,10 +11,10 @@
     t.src=v;s=b.getElementsByTagName(e)[0];
     s.parentNode.insertBefore(t,s)}(window, document,'script',
     'https://connect.facebook.net/en_US/fbevents.js');
-    fbq('init', 'YOUR_META_PIXEL_ID'); // Substitua YOUR_META_PIXEL_ID pelo seu ID do Meta Pixel
+    fbq('init', '811056244975308');
     fbq('track', 'PageView');
-    // Track purchase/conversion event on thank you page
-    fbq('track', 'Contact', {
+    // Track Lead conversion on thank-you page
+    fbq('track', 'Lead', {
         content_name: 'Built-ins Quote Request Completed',
         content_category: 'Home Improvement',
         value: 0,
@@ -22,7 +22,7 @@
     });
     </script>
     <noscript><img height="1" width="1" style="display:none"
-    src="https://www.facebook.com/tr?id=YOUR_META_PIXEL_ID&ev=PageView&noscript=1"
+    src="https://www.facebook.com/tr?id=811056244975308&ev=PageView&noscript=1"
     /></noscript>
     <!-- End Meta Pixel Code -->
     
