--- a/meta/thank-you.html
+++ b/meta/thank-you.html
@@ -26,6 +26,16 @@
     /></noscript>
     <!-- End Meta Pixel Code -->
     
+    <!-- Microsoft Clarity -->
+    <script type="text/javascript">
+        (function(c,l,a,r,i,t,y){
+            c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+            t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+            y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+        })(window, document, "clarity", "script", "u1d1b7xn4w");
+    </script>
+    <!-- End Microsoft Clarity -->
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thank You - Innov Builders | Custom Built-ins</title>
