feat: Update Google Analytics tracking ID and conversion event on thank you page

--- a/google/thank-you.html
+++ b/google/thank-you.html
@@ -10,22 +10,20 @@
     </script>
     <!-- End Google Tag Manager -->
     
-    <!-- Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16940335819"></script>
     <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'G-XXXXXXXXXX'); // Substitua G-XXXXXXXXXX pelo seu ID do Google Analytics
-    // Track conversion on thank you page
-    gtag('event', 'conversion', {
-        'send_to': 'AW-CONVERSION_ID/CONVERSION_LABEL', // Configure seu ID de conversão do Google Ads
-        'event_category': 'Form',
-        'event_label': 'Built-ins Quote Request Completed',
-        'value': 0
-    });
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'AW-16940335819');
+      // Event snippet for LEAD [BUILT-INS] conversion page
+      gtag('event', 'conversion', {
+          'send_to': 'AW-16940335819/HO3sCKn-8LsbEMuF5I0_',
+          'value': 1.0,
+          'currency': 'USD'
+      });
     </script>
-    <!-- End Google Analytics -->
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
