feat: Add platform property to formObject for Meta Ads tracking

--- a/meta/index.html
+++ b/meta/index.html
@@ -1525,6 +1525,7 @@
                 formObject.page_name = 'Custom Built-ins Massachusetts - Meta Campaign';
                 formObject.campaign_name = 'Built-ins Landing Page - Meta Ads';
                 formObject.traffic_source = 'Meta Ads';
+                formObject.platform = 'meta';
                 
                 console.log('Form data collected:', formObject);
                 
