--- a/google/thank-you.html
+++ b/google/thank-you.html
@@ -10,6 +10,16 @@
     </script>
     <!-- End Google Tag Manager -->
     
+    <!-- Microsoft Clarity -->
+    <script type="text/javascript">
+        (function(c,l,a,r,i,t,y){
+            c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+            t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+            y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+        })(window, document, "clarity", "script", "u3nfhgff15");
+    </script>
+    <!-- End Microsoft Clarity -->
+    
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16940335819"></script>
     <script>
