feat: Update conversion event snippet for LEAD - BUILT-INS on thank you page

--- a/google/thank-you.html
+++ b/google/thank-you.html
@@ -27,13 +27,15 @@
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
       gtag('config', 'AW-16940335819');
-      // Event snippet for LEAD [BUILT-INS] conversion page
-      gtag('event', 'conversion', {
-          'send_to': 'AW-16940335819/HO3sCKn-8LsbEMuF5I0_',
-          'value': 1.0,
-          'currency': 'USD'
-      });
     </script>
+        <!-- Event snippet for LEAD - BUILT-INS conversion page -->
+        <script>
+            gtag('event', 'conversion', {
+                    'send_to': 'AW-16940335819/hK22CO6u8bsbEMuF5I0_',
+                    'value': 1.0,
+                    'currency': 'USD'
+            });
+        </script>
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
