feat: standardize project structure with assets folder
- Create assets/ folder structure (images/{header,ceo,projects}, css, js)
- Move all images to standardized locations
- Move HTML pages to pages/ folder
- Update all image paths in index.html, google/, and meta/ pages
- Create campaign index page at root for easy navigation
- Consolidate duplicate assets between google/ and meta/
- Move 'fotos ' folder to assets/images/fotos-extras

All pages updated with new relative paths (../ prefix for assets).

--- a/google/index.html
+++ b/google/index.html
@@ -1434,7 +1434,7 @@
     <header class="sticky-header">
         <div class="header-container">
             <div class="logo">
-                <img src="logo innov builders.jpg" alt="Innov Builders Logo">
+                <img src="../assets/images/logo innov builders.jpg" alt="Innov Builders Logo">
             </div>
             <div class="header-cta">
                 <a href="tel:+19788710597" class="header-phone">
@@ -1450,9 +1450,9 @@
     <!-- HERO VIDEO SECTION -->
     <section class="hero-video">
         <div class="hero-slider">
-            <div class="hero-slide active" style="background-image: url('FOTOS HEADER/Living+Room+Built-Ins+_tutorial_.webp')"></div>
-            <div class="hero-slide" style="background-image: url('FOTOS HEADER/closet-cabinets-custom.jpg')"></div>
-            <div class="hero-slide" style="background-image: url('FOTOS HEADER/ugly-built-in-shelves-v0-bjfsl45b88td1.webp')"></div>
+            <div class="hero-slide active" style="background-image: url('../assets/images/header/Living+Room+Built-Ins+_tutorial_.webp')"></div>
+            <div class="hero-slide" style="background-image: url('../assets/images/header/closet-cabinets-custom.jpg')"></div>
+            <div class="hero-slide" style="background-image: url('../assets/images/header/ugly-built-in-shelves-v0-bjfsl45b88td1.webp')"></div>
         </div>
         <div class="hero-overlay">
             <div class="hero-content">
@@ -1506,8 +1506,8 @@
         <div class="portfolio-preview-grid">
             <div class="portfolio-item">
                 <div class="before-after-slider" data-project="built-in-entertainment-center">
-                    <img src="projects/Built-in entertainment center/after.png" alt="Before" class="before-image">
-                    <img src="projects/Built-in entertainment center/before.jpg" alt="After" class="after-image">
+                    <img src="../assets/images/projects/Built-in entertainment center/after.png" alt="Before" class="before-image">
+                    <img src="../assets/images/projects/Built-in entertainment center/before.jpg" alt="After" class="after-image">
                     <div class="slider-handle"></div>
                     <div class="before-after-labels">
                         <span class="before-label">BEFORE</span>
@@ -1521,8 +1521,8 @@
             </div>
             <div class="portfolio-item">
                 <div class="before-after-slider" data-project="built-in-bookshelf">
-                    <img src="projects/Built-in bookshelf/after.jpg" alt="Before" class="before-image">
-                    <img src="projects/Built-in bookshelf/before.jpg" alt="After" class="after-image">
+                    <img src="../assets/images/projects/Built-in bookshelf/after.jpg" alt="Before" class="before-image">
+                    <img src="../assets/images/projects/Built-in bookshelf/before.jpg" alt="After" class="after-image">
                     <div class="slider-handle"></div>
                     <div class="before-after-labels">
                         <span class="before-label">BEFORE</span>
@@ -1536,8 +1536,8 @@
             </div>
             <div class="portfolio-item">
                 <div class="before-after-slider" data-project="built-in-bench-drawers">
-                    <img src="projects/Built-in bench with drawers/after.jpeg" alt="Before" class="before-image">
-                    <img src="projects/Built-in bench with drawers/before.jpeg" alt="After" class="after-image">
+                    <img src="../assets/images/projects/Built-in bench with drawers/after.jpeg" alt="Before" class="before-image">
+                    <img src="../assets/images/projects/Built-in bench with drawers/before.jpeg" alt="After" class="after-image">
                     <div class="slider-handle"></div>
                     <div class="before-after-labels">
                         <span class="before-label">BEFORE</span>
@@ -1661,7 +1661,7 @@
                 </div>
                 <div class="ceo-image-section">
                     <div class="ceo-section">
-                        <img src="foto iago/Cópia de Cópia de built-in (3).png" alt="Iago Maciel - CEO & Founder" class="ceo-original-photo">
+                        <img src="../assets/images/ceo/Cópia de Cópia de built-in (3).png" alt="Iago Maciel - CEO & Founder" class="ceo-original-photo">
                     </div>
                 </div>
             </div>
@@ -1678,8 +1678,8 @@
         <div class="portfolio-grid">
             <div class="portfolio-item">
                 <div class="before-after-slider" data-project="built-in-entertainment-center">
-                    <img src="projects/Built-in entertainment center/after.png" alt="Before" class="before-image">
-                    <img src="projects/Built-in entertainment center/before.jpg" alt="After" class="after-image">
+                    <img src="../assets/images/projects/Built-in entertainment center/after.png" alt="Before" class="before-image">
+                    <img src="../assets/images/projects/Built-in entertainment center/before.jpg" alt="After" class="after-image">
                     <div class="slider-handle"></div>
                     <div class="before-after-labels">
                         <span class="before-label">BEFORE</span>
@@ -1693,8 +1693,8 @@
             </div>
             <div class="portfolio-item">
                 <div class="before-after-slider" data-project="built-in-bookshelf">
-                    <img src="projects/Built-in bookshelf/after.jpg" alt="Before" class="before-image">
-                    <img src="projects/Built-in bookshelf/before.jpg" alt="After" class="after-image">
+                    <img src="../assets/images/projects/Built-in bookshelf/after.jpg" alt="Before" class="before-image">
+                    <img src="../assets/images/projects/Built-in bookshelf/before.jpg" alt="After" class="after-image">
                     <div class="slider-handle"></div>
                     <div class="before-after-labels">
                         <span class="before-label">BEFORE</span>
@@ -1708,8 +1708,8 @@
             </div>
             <div class="portfolio-item">
                 <div class="before-after-slider" data-project="built-in-fireplace-shelving">
-                    <img src="projects/Built-in fireplace shelving/after.jpg" alt="Before" class="before-image">
-                    <img src="projects/Built-in fireplace shelving/before.jpeg" alt="After" class="after-image">
+                    <img src="../assets/images/projects/Built-in fireplace shelving/after.jpg" alt="Before" class="before-image">
+                    <img src="../assets/images/projects/Built-in fireplace shelving/before.jpeg" alt="After" class="after-image">
                     <div class="slider-handle"></div>
                     <div class="before-after-labels">
                         <span class="before-label">BEFORE</span>
@@ -1728,8 +1728,8 @@
         <div class="portfolio-grid">
             <div class="portfolio-item">
                 <div class="before-after-slider" data-project="built-in-bench-drawers">
-                    <img src="projects/Built-in bench with drawers/after.jpeg" alt="Before" class="before-image">
-                    <img src="projects/Built-in bench with drawers/before.jpeg" alt="After" class="after-image">
+                    <img src="../assets/images/projects/Built-in bench with drawers/after.jpeg" alt="Before" class="before-image">
+                    <img src="../assets/images/projects/Built-in bench with drawers/before.jpeg" alt="After" class="after-image">
                     <div class="slider-handle"></div>
                     <div class="before-after-labels">
                         <span class="before-label">BEFORE</span>
@@ -1743,8 +1743,8 @@
             </div>
             <div class="portfolio-item">
                 <div class="before-after-slider" data-project="built-in-laundry-unit">
-                    <img src="projects/Built-in laundry unit/after.jpg" alt="Before" class="before-image">
-                    <img src="projects/Built-in laundry unit/before.jpg" alt="After" class="after-image">
+                    <img src="../assets/images/projects/Built-in laundry unit/after.jpg" alt="Before" class="before-image">
+                    <img src="../assets/images/projects/Built-in laundry unit/before.jpg" alt="After" class="after-image">
                     <div class="slider-handle"></div>
                     <div class="before-after-labels">
                         <span class="before-label">BEFORE</span>
@@ -1758,8 +1758,8 @@
             </div>
             <div class="portfolio-item">
                 <div class="before-after-slider" data-project="built-in-corner-cabinet">
-                    <img src="projects/Built-in corner cabinet/after.jpg" alt="Before" class="before-image">
-                    <img src="projects/Built-in corner cabinet/before.jpg" alt="After" class="after-image">
+                    <img src="../assets/images/projects/Built-in corner cabinet/after.jpg" alt="Before" class="before-image">
+                    <img src="../assets/images/projects/Built-in corner cabinet/before.jpg" alt="After" class="after-image">
                     <div class="slider-handle"></div>
                     <div class="before-after-labels">
                         <span class="before-label">BEFORE</span>
