--- a/google/thank-you.html
+++ b/google/thank-you.html
@@ -321,7 +321,7 @@
             </div>
 
             <div class="logo">
-                <img src="logo innov builders.jpg" alt="Innov Builders Logo">
+                <img src="../assets/images/logo innov builders.jpg" alt="Innov Builders Logo">
             </div>
         </div>
     </div>
