--- a/meta/index.html
+++ b/meta/index.html
@@ -1112,8 +1112,8 @@
             </div>
             <div class="portfolio-item">
                 <div class="before-after-slider" data-project="built-in-corner-cabinet">
-                    <img src="../assets/images/projects/Built-in corner cabinet/after.jpg" alt="Before" class="before-image">
-                    <img src="../assets/images/projects/Built-in corner cabinet/before.jpg" alt="After" class="after-image">
+                    <img src="../assets/images/projects/ 120 Beaconsfield/DJI_20251108_123300_877.webp" alt="Before" class="before-image">
+                    <img src="../assets/images/projects/ 120 Beaconsfield/IMG_0562.webp" alt="After" class="after-image">
                     <div class="slider-handle"></div>
                     <div class="before-after-labels">
                         <span class="before-label">BEFORE</span>
