fix(portfolio): set Built-in corner cabinet mapping to before='cópia de IMG_0562.webp' and after='DJI_20251108_123300_877.webp'

--- a/pages/index.html
+++ b/pages/index.html
@@ -1094,8 +1094,8 @@
             </div>
             <div class="portfolio-item">
                 <div class="before-after-slider" data-project="built-in-corner-cabinet">
-                    <img src="../assets/images/projects/ 120 Beaconsfield/DJI_20251108_123300_877.webp" alt="Before" class="before-image">
-                    <img src="../assets/images/projects/ 120 Beaconsfield/IMG_0562.webp" alt="After" class="after-image">
+                    <img src="../assets/images/projects/ 120 Beaconsfield/cópia de IMG_0562.webp" alt="Before" class="before-image">
+                    <img src="../assets/images/projects/ 120 Beaconsfield/DJI_20251108_123300_877.webp" alt="After" class="after-image">
                     <div class="slider-handle"></div>
                     <div class="before-after-labels">
                         <span class="before-label">BEFORE</span>
