fix(css): add mobile top padding to hero overlay to avoid touching the fixed header; fix CSS brace in pages variant

--- a/google/index.html
+++ b/google/index.html
@@ -246,6 +246,7 @@
 
             .hero-overlay {
                 padding-bottom: 70px; /* ensure content clears floating CTA */
+                padding-top: 90px;    /* ensure content clears fixed header */
             }
         }
 
@@ -256,6 +257,7 @@
 
             .hero-overlay {
                 padding-bottom: 80px;
+                padding-top: 100px; /* extra space for smaller screens */
             }
         }
 
