--- a/pages/index.html
+++ b/pages/index.html
@@ -918,6 +918,10 @@
             .hero-title {
                 font-size: 2rem;
             }
+            /* Ensure hero content clears the fixed header on mobile */
+            .hero-overlay {
+                padding-top: 80px; /* approx header height + safe space */
+            }
 
             .section {
                 padding: 60px 0;
