--- a/meta/index.html
+++ b/meta/index.html
@@ -930,6 +930,11 @@
                 transform: scale(1) !important;
                 transition: opacity 1.5s ease-in-out, transform 3s ease-in-out;
             }
+
+            /* Ensure hero content clears the fixed header on mobile */
+            .hero-overlay {
+                padding-top: 80px; /* approx header height + safe space */
+            }
         }
 
         @media (max-width: 480px) {
