fix(css/mobile): ensure hero sits below fixed header (margin-top on hero-video + padding-top on hero-overlay) across pages

--- a/google/index.html
+++ b/google/index.html
@@ -242,6 +242,7 @@
                 height: auto;         /* kill viewport height on mobile */
                 min-height: 0;        /* remove desktop min-height */
                 padding: 80px 0 90px; /* give extra bottom space */
+                margin-top: 88px;     /* push below fixed header */
             }
 
             .hero-overlay {
@@ -253,6 +254,7 @@
         @media (max-width: 768px) {
             .hero-video {
                 padding: 70px 0 90px; /* compact top, extra bottom */
+                margin-top: 96px;     /* extra nudge on very small screens */
             }
 
             .hero-overlay {
