--- a/meta/index.html
+++ b/meta/index.html
@@ -935,6 +935,9 @@
             .hero-overlay {
                 padding-top: 80px; /* approx header height + safe space */
             }
+
+            /* Push hero block below fixed header */
+            .hero-video { margin-top: 88px; }
         }
 
         @media (max-width: 480px) {
