--- a/pages/index.html
+++ b/pages/index.html
@@ -1259,7 +1259,7 @@
                 <div class="contact-info-grid">
                     <div class="contact-item">
                         <i class="fas fa-phone"></i>
-                        <span>(978) 871-0597</span>
+                        <a href="tel:+19788710597" style="color: inherit; text-decoration: none;">(978) 871-0597</a>
                     </div>
                     <div class="contact-item">
                         <i class="fas fa-envelope"></i>
@@ -1294,11 +1294,11 @@
         </div>
     </footer>
 
-    <!-- FLOATING CALL BUTTON -->
-    <div class="floating-call" id="floatingCall">
+    <!-- FLOATING CALL BUTTON (click-to-call) -->
+    <a class="floating-call" id="floatingCall" href="tel:+19788710597" aria-label="Call Innov Builders">
         <i class="fas fa-phone"></i>
         <div class="floating-call-text" id="floatingText">Talk to us right now</div>
-    </div>
+    </a>
 
     <script>
         // Smooth scrolling for anchor links - all buttons lead to contact form
@@ -1326,13 +1326,15 @@
             floatingText.classList.add('show');
         }, 5000);
 
-        // Click handler for floating button
-        floatingCall.addEventListener('click', function() {
-            document.querySelector('#contact').scrollIntoView({
-                behavior: 'smooth',
-                block: 'start'
+        // If it's not an anchor tel link, fall back to scrolling to contact
+        if (floatingCall && floatingCall.tagName !== 'A') {
+            floatingCall.addEventListener('click', function() {
+                document.querySelector('#contact').scrollIntoView({
+                    behavior: 'smooth',
+                    block: 'start'
+                });
             });
-        });
+        }
 
         // Header background on scroll
         window.addEventListener('scroll', function() {
