feat(header): replace plain phone number with Call Now button (tel:) in Google variant header

--- a/google/index.html
+++ b/google/index.html
@@ -1441,8 +1441,8 @@
                 <img src="../assets/images/logo innov builders.jpg" alt="Innov Builders Logo">
             </div>
             <div class="header-cta">
-                <a href="tel:+19788710597" class="header-phone">
-                    <i class="fas fa-phone"></i> (978) 871-0597
+                <a href="tel:+19788710597" class="btn-header" aria-label="Call (978) 871-0597">
+                    <i class="fas fa-phone"></i> Call Now
                 </a>
                 <a href="#contact" class="btn-header">
                     <i class="fas fa-calendar-check"></i> Free Estimate
